--- a/.mypy.ini
+++ b/.mypy.ini
@@ -7,14 +7,14 @@ no_implicit_optional = true
 ignore_missing_imports = false
 
 # Исключения
-exclude = '''
-    ^\.venv/
-    ^venv/
-    ^build/
-    ^dist/
-    ^\.mypy_cache/
-    ^\.pytest_cache/
-'''
+exclude = [
+    "^\.venv/",
+    "^venv/",
+    "^build/",
+    "^dist/",
+    "^\.mypy_cache/",
+    "^\.pytest_cache/",
+]
 
 # Настройки для pytest
 [[mypy.overrides]]
