Добавлена документация о длине строки 119 символов во все конфигурационные файлы
- Добавлены комментарии о длине строки в .flake8, pyproject.toml, .mypy.ini
- Обновлен Makefile для использования poetry run
- Создан .editorconfig для поддержки длины строки в IDE
- Создан CONFIG.md с документацией о настройках длины строки
- Все инструменты теперь используют единую длину строки 119 символов

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,4 +1,6 @@
 [mypy]
+# Примечание: mypy не проверяет длину строки кода
+# Длина строки кода: 119 символов (настроено в .flake8 и pyproject.toml для black/isort)
 python_version = 3.9
 warn_return_any = true
 warn_unused_configs = true
