docs: добавлены правила игнорирования временных файлов отчетов и проверок
- Добавлены паттерны для игнорирования временных файлов отчетов
- Временные файлы отчетов и проверок не коммитятся в проект

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,18 @@ htmlcov/
 .dmypy.json
 dmypy.json
 
+# Временные файлы отчетов и проверок
+*ОТЧЕТ*.md
+*отчет*.md
+*REPORT*.md
+*report*.md
+*ПРОВЕРК*.md
+*проверк*.md
+*CHECK*.md
+*check*.md
+*.tmp
+temp_*.md
+
 # Jupyter Notebook
 .ipynb_checkpoints
 
