chore: обновлен .gitignore и README.md, улучшены отчеты о покрытии
- Добавлена директория для Python проектов в .gitignore.
- Обновлены разделы в README.md с основными возможностями приложения и примерами использования классов.
- Обновлены HTML-отчеты о покрытии с изменением версии coverage.py на 7.10.7, общее покрытие теперь составляет 97%.

--- a/.gitignore
+++ b/.gitignore
@@ -89,6 +89,9 @@ dmypy.json
 *база-знаний*/
 *База-знаний*/
 
+# Python проекты
+Python-проекты/
+
 # Временные файлы проекта
 14.1_main.py
 ОБНОВЛЕНИЕ-ДАТ.md
