--- a/.mypy.ini
+++ b/.mypy.ini
@@ -9,20 +9,5 @@ no_implicit_optional = true
 ignore_missing_imports = false
 
 # Исключения
-exclude = [
-    "^\.venv/",
-    "^venv/",
-    "^build/",
-    "^dist/",
-    "^\.mypy_cache/",
-    "^\.pytest_cache/",
-]
-
-# Настройки для pytest
-[[mypy.overrides]]
-module = [
-    "pytest",
-    "pytest.*",
-]
-ignore_missing_imports = true
+exclude = (^\.venv/|^venv/|^build/|^dist/|^\.mypy_cache/|^\.pytest_cache/)
 
