feat: обновлены правила игнорирования файлов и удалены устаревшие документы

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,11 @@ reports/
 .dmypy.json
 dmypy.json
 
+# Markdown файлы (не коммитить по умолчанию)
+*.md
+# Исключение для README.md (можно добавить при необходимости через git add -f)
+!README.md
+
 # Временные файлы отчетов и проверок
 *ОТЧЕТ*.md
 *отчет*.md
